--- a/passatempo/assets/css/style.css
+++ b/passatempo/assets/css/style.css
@@ -1,4 +1,4 @@
-@import url('https://fonts.googleapis.com/css2?family=Noto+Sans+JP:wght@100;300;400;500;700;900&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Roboto+Mono:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;1,100;1,200;1,300;1,400;1,500;1,600;1,700&display=swap');
 *{
 margin: 0;
 padding: 0;
@@ -19,14 +19,32 @@ font-family: 'Noto Sans JP', sans-serif;
     /* background-color: black; */
   }
   
+  .column h2{
+    color: white;
+    text-align: left;
+    margin-left: 8%;
+  
+  }
+
+
   .column1 {
     float: right;
     width: 45%;
     padding: 10px;
     /* background-color: red; */
+    
   }
+.column1 h2{
+  color: white;
+  text-align: left;
+  margin-left: 8%;
 
+}
   
+.column1 p {
+  color: gray ;
+
+}
   
   
 body {
@@ -38,7 +56,7 @@ background-color: #6150376e;
 
 
 
-img {
+ img {
     float: left;
     padding: 1rem;
     /* margin: 0px 10px 10px 0; */
@@ -47,11 +65,7 @@ img {
     
 }
 
-h2 {
 
-  margin-left: 10%;
-  /* text-align: center; */
-}
 
 p{
     margin-top: 5%;
