--- a/portifolio/templates/index.html
+++ b/portifolio/templates/index.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, install-scale=1.0">
     <title>Portifolio</title>
-    <link rel="stylesheet" href="./assets/css/style.css">
+    <link rel="stylesheet" href="/static/css/style.css">
     
 </head>
 
@@ -28,19 +28,19 @@
 
             <div class="mySlides fade">
               
-              <img src="assets/img/back03.jpg" >
+              <img src="/static/img/back03.jpg"style="width:100%" >
               
             </div>
             
             <div class="mySlides fade">
               
-              <img src="assets/img/back02.jpg" >
+              <img src="/static/img/back02.jpg" style="width:100%">
               
             </div>
             
             <div class="mySlides fade">
               
-              <img src="assets/img/back03.jpg">
+              <img src="/static/img/back03.jpg"style="width:100%">
               
             </div>
             <div style="text-align:center">
@@ -49,13 +49,13 @@
                 <span class="dot"></span> 
               </div>
             </div>
-            
+        </div>    
 
  </header>
 <section id="about">
 
     <div> 
-        <img src="assets/img/me.png"  alt="eu">
+        <img src="/static/img/me.png"  alt="eu">
     </div>
 <div>
     <p>
@@ -69,28 +69,28 @@
 
 <section id="projetos">
     <div>
-        <img src="assets/img/projeto.png" alt="">
+        <img src="/static/img/projeto.png" alt="">
         <h2>Projeto 01</h2>
         <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Sed fugit minima a perspiciatis 
         nostrum non quis esse, eligendi nihil illum numquam, aperiam vitae aliquid ut eum sit similique in officiis!</p>
         <button>veja mais</button>
     </div>
     <div>
-    <img src="assets/img/projeto.png" alt="">
+    <img src="/static/img/projeto.png" alt="">
         <h2>Projeto 02</h2>
         <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Sed fugit minima a perspiciatis 
             nostrum non quis esse, eligendi nihil illum numquam, aperiam vitae aliquid ut eum sit similique in officiis!</p>
         <button>veja mais</button>
     </div>
     <div>
-        <img src="assets/img/projeto.png" alt="">
+        <img src="/static/img/projeto.png" alt="">
         <h2>Projeto 03</h2>
         <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Sed fugit minima a perspiciatis 
             nostrum non quis esse, eligendi nihil illum numquam, aperiam vitae aliquid ut eum sit similique in officiis!</p>
             <button>veja mais</button>
     </div>
     <div>
-    <img src="assets/img/projeto.png" alt="">
+    <img src="/static/img/projeto.png" alt="">
         <h2>Projeto 04</h2>
         <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Sed fugit minima a perspiciatis 
             nostrum non quis esse, eligendi nihil illum numquam, aperiam vitae aliquid ut eum sit similique in officiis!</p>
@@ -175,8 +175,8 @@
 
  </footer>
 
- <script src="./assets/js/script.js"></script>
- <script src="./assets/js/slide.script.js"></script>
+ <script src="/static/js/script.js"></script>
+ <script src="/static/js/slide.script.js"></script>
 </body>
 
 </html>
