--- a/portifolio/templates/index.html
+++ b/portifolio/templates/index.html
@@ -127,11 +127,11 @@
 
 <section id="contato">
 
-    <div id="redes">
+    <!-- <div id="redes">
        <h3>Se conecte comigo</h3>
 
-       <div id="icons">
-          <a href="https://www.linkedin.com/in/thicode/" target="_blank"> 
+       
+          <a href="https://www.linkedin.com/" target="_blank"> 
              <i class="fa fa-linkedin-square" aria-hidden="true"></i> 
           </a>
  
@@ -139,12 +139,10 @@
              <i class="fa fa-github" aria-hidden="true"></i> 
           </a>
  
-          <a href="https://www.instagram.com/thi.code/" target="_blank"> 
-             <i class="fa fa-instagram" aria-hidden="true"></i>
-          </a>
-       </div>
+         
+       </div> -->
        
-    </div>
+    
 
     <div id="form">
 
