--- a/portifolio/static/css/style.css
+++ b/portifolio/static/css/style.css
@@ -229,6 +229,16 @@ section#habilidades div span#js {
     width: 40%;
 }
 
+section#habilidades div span#py {
+    background-color: rgb(162, 0, 255);
+    color: #fff;
+    text-align: end;
+    padding: .3rem;
+    border-radius: 1rem;
+    width: 35%;
+}
+
+
 /* Seção de contato */
 
 section#contato {
@@ -327,3 +337,41 @@ section#contato {
     color: #fff;
     transform: scale(1.2);
  }
+
+.social-footer {
+  padding: 1rem;
+  background: #0a0a0a;
+  display: -webkit-flex;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-align-items: center;
+      -ms-flex-align: center;
+          align-items: center;
+  -webkit-justify-content: space-between;
+      -ms-flex-pack: justify;
+          justify-content: space-between;
+}
+
+.social-footer  p{
+    color: #fff;
+}
+
+
+.social-footer-right {
+  
+  color: #fefefe;
+  
+  
+}
+
+
+ 
+  
+  
+  
+  
+  
+ 
+
+  
+  
