--- a/portifolio/templates/index.html
+++ b/portifolio/templates/index.html
@@ -121,6 +121,12 @@
 
     </div>
 
+    <p>Python</p>
+    <div>
+        <span id="py">35%</span>
+
+    </div>
+
 </section>
 
 <!-- Contato -->
@@ -169,9 +175,16 @@
 
  <!-- Fim do Contato -->
 
- <footer>
-
- </footer>
+ <footer class="social-footer">
+    <p><a href="#inicio" ><img src="../static/img/up.png" alt="Inicio"></a></p>
+    <div class="social-footer-left">
+      <p>@todos os direitos reservados</p>
+    </div>
+    <div class="social-footer-right">
+      <a href="https://github.com/raimundlima" target="_blank"><img src="../static/img/464-4644573_github-logo-png-github-transparent-png.png" alt="Icone do git"></a>
+       
+    </div>
+  </footer>
 
  <script src="../static/js/script.js"></script>
  <script src="../static/js/slide.script.js"></script>
