--- a/portifolio/templates/index.html
+++ b/portifolio/templates/index.html
@@ -176,12 +176,12 @@
  <!-- Fim do Contato -->
 
  <footer class="social-footer">
-    <p><a href="#inicio" ><img src="../static/img/up.png" alt="Inicio"></a></p>
+    <p><a href="#inicio" ><img src="../static/img/upper.png" alt="Inicio"></a></p>
     <div class="social-footer-left">
       <p>@todos os direitos reservados</p>
     </div>
     <div class="social-footer-right">
-      <a href="https://github.com/raimundlima" target="_blank"><img src="../static/img/464-4644573_github-logo-png-github-transparent-png.png" alt="Icone do git"></a>
+      <a href="https://github.com/raimundlima" target="_blank"><img src="../static/img/gitII.png" alt="Icone do git"></a>
        
     </div>
   </footer>
