--- a/portifolio/templates/index.html
+++ b/portifolio/templates/index.html
@@ -150,11 +150,11 @@
        
     
 
-    <div id="form">
+    <form action="send.html" method="POST">
 
        <h3>Mande uma mensagem</h3>
 
-       <form>
+       
 
           <label for="nome">Nome</label>
           <input id="nome" name="nome" type="text">
@@ -165,11 +165,11 @@
           <label for="mensagem">Mensagem</label>
           <textarea name="mensagem" id="mensagem" cols="10" rows="5"></textarea>
 
-          <button id="enviar">Enviar</button>
+          <button type="submit" id="enviar">Enviar</button>
 
-       </form>
+       
 
-    </div>
+    </form>
 
  </section>
 
