--- a/portifolio/templates/index.html
+++ b/portifolio/templates/index.html
@@ -6,6 +6,7 @@
     <meta name="viewport" content="width=device-width, install-scale=1.0">
     <title>Portifolio</title>
     <link rel="stylesheet" href="../static/css/style.css">
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
     
 </head>
 
@@ -68,36 +69,19 @@
 </section>
 
 <section id="projetos">
-    <div>
-        <img src="../static/img/projeto.png" alt="">
-        <h2>Projeto 01</h2>
-        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Sed fugit minima a perspiciatis 
-        nostrum non quis esse, eligendi nihil illum numquam, aperiam vitae aliquid ut eum sit similique in officiis!</p>
-        <button>veja mais</button>
+      
+    <a id="config" href="/adm"><i class="fa fa-cog" aria-hidden="true"></i></a>
+
+    {% for p in projetos %}
+    <div id='card'>
+       <img src="{{p.imagem}}" alt="img-lorem">
+       <h2>{{p.nome}}</h2>
+       <p>{{p.descricao}}</p>
+       <a href="{{p.link}}" target="_blank">Veja mais</a>
     </div>
-    <div>
-    <img src="../static/img/projeto.png" alt="">
-        <h2>Projeto 02</h2>
-        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Sed fugit minima a perspiciatis 
-            nostrum non quis esse, eligendi nihil illum numquam, aperiam vitae aliquid ut eum sit similique in officiis!</p>
-        <button>veja mais</button>
-    </div>
-    <div>
-        <img src="../static/img/projeto.png" alt="">
-        <h2>Projeto 03</h2>
-        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Sed fugit minima a perspiciatis 
-            nostrum non quis esse, eligendi nihil illum numquam, aperiam vitae aliquid ut eum sit similique in officiis!</p>
-            <button>veja mais</button>
-    </div>
-    <div>
-    <img src="/static/img/projeto.png" alt="">
-        <h2>Projeto 04</h2>
-        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Sed fugit minima a perspiciatis 
-            nostrum non quis esse, eligendi nihil illum numquam, aperiam vitae aliquid ut eum sit similique in officiis!</p>
-            <button>veja mais</button>
-        </div>
-    
-</section>
+    {% endfor %}
+
+ </section>
 
 <section id="habilidades">
     <h2>Habilidades Técnicas</h2>
