--- a/projeto_catalog/templates/index.html
+++ b/projeto_catalog/templates/index.html
@@ -23,7 +23,7 @@
                 <li><a onclick="carregar('catalogo.html')" href="#">Catalogo</a></li>
                 <!-- <li><a href="../templates/catalogo.html"target="_main">Catalogo</a></li> -->
                 <li><a href="#">Cadastro</a></li>
-                <li><a href="#">Sobre</a></li>
+                <li><a href="#">Sobr</a></li>
                 
             </ul>
         </nav>
